bugfix - remove body z-index

--- a/style.css
+++ b/style.css
@@ -80,8 +80,8 @@ body {
 }
 
 body {
-  position: relative;
-  z-index: -2;
+  /* position: relative;
+  z-index: -2; */
 
   font-family: sans-serif;
   font-size: 1.6rem; /* 10px * 1.6 = 16px padrão */
